// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the Engineer card renders correctly when fellow data not passed [Return null view] 1`] = `
<div
  className="engineer-bio-wrapper"
>
  <h3
    className="profile-card-header"
  >
    My Profile
  </h3>
  <div
    className="bio-card text-center"
  />
</div>
`;

exports[`tests the Engineer card renders correctly when loading is false 1`] = `
<div
  className="engineer-bio-wrapper"
>
  <h3
    className="profile-card-header"
  >
    My Profile
  </h3>
  <div
    className="bio-card text-center"
  >
    <EngineerDetails
      fellow={
        Object {
          "apprenticeship_end_date": "",
          "apprenticeship_project": "WatchTower",
          "apprenticeship_start_date": "",
          "apprenticeship_technology": "PHP/JavaScript",
          "fellow_id": "-LJK1qECFdekucrwqqkh",
          "first_name": "Cristian",
          "last_name": "Bartell",
          "manager_id": "-LGy4OuPDHCZCZvDuPz0",
          "sims_end_date": "",
          "sims_project": "AuthorsHaven",
          "sims_project_technology": "Python/Django",
          "sims_start_date": "",
        }
      }
      view=""
    />
  </div>
</div>
`;

exports[`tests the Engineer card renders correctly when loading is true 1`] = `
<div
  className="engineer-bio-wrapper"
>
  <h3
    className="profile-card-header"
  >
    My Profile
  </h3>
  <div
    className="bio-card text-center"
  >
    <EngineerDetails
      fellow={Object {}}
      view=""
    />
  </div>
</div>
`;
